--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,5 +1,5 @@
 .skills__container {
-    grid-template-columns: repeat(1, 350px);
+    grid-template-columns: repeat(1, 450px);
     column-gap: 3rem;
     justify-content: center;
 }
@@ -61,7 +61,7 @@ skills__data {
     }
   }
   /* For small screens */
-  @media screen and (max-width: 350px) {
+  @media screen and (max-width: 250px) {
     .skills__box {
         column-gap: 1.25rem;
 
